--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/_home.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/_seatmap.css" asp-append-version="true">
     <link rel="icon" href="/images/logo5.png" type="image/png" />
 </head>
 
@@ -59,46 +60,33 @@
             </div>
         </div>
         <div class="buttons">
-            <a href="#">
-                @* <i class="bx bx-support" title="Hỗ trợ"></i>  *@
+            <a href="/HelpCenter" class="btn-help-center">
                 Hỗ trợ
             </a>
 
             @if (string.IsNullOrEmpty(username))
             {
                 <a href="/Account/Login/Login" title="Đăng nhập"
-                    style="background-color: #fff; color: #1976D2; border-radius: 12px;">
-                    @* <i class="bx bx-user"></i>  *@
+                    class="btn-login">
                     Đăng nhập
                 </a>
             }
             else
             {
-                <a href="/ForCustomer/Notifications/Index"
-                    style="position: relative; text-decoration:none; color: #1976D2; display: inline-flex; align-items: center; gap: 1rem; padding: 10px 10px;"
-                    title="Thông báo">
-                    <i class="bx bx-bell" style="font-size: 24px;"></i>
+                <a href="/ForCustomer/Notifications/Index" title="Thông báo">
+                    @* <i class="bx bx-bell" style="font-size: 24px;"></i> *@
                 </a>
-                <div class="dropdown"
-                    style="display: inline-flex; align-items: center; vertical-align: middle; background-color: #1976D2;">
-                    <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"
-                        title="Tài khoản của tôi"
-                        style="text-decoration: none; color: #1976D2; display: inline-flex; align-items: center; gap: 0.5rem; padding: 10px 0px 10px 15px;">
-
-
+                <div class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" title="Tài khoản của tôi">
                         <i class='bx bx-user' style="font-size: 24px; margin-right: 8px;"></i>
-                        @* <span style="margin-right: 5px;">@username</span> *@
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end">
                         <li>
-                            <h6 class="dropdown-header" style="font-size: 1.3rem;">Tài khoản của: @username</h6>
+                            <h6 class="dropdown-header">Tài khoản của: @username</h6>
                         </li>
-                        <li><a class="dropdown-item" href="/ForCustomer/MyAccount/Index" style="background-color: white;"><i
-                                    class='bx bxs-user-detail'></i>Thông tin cá nhân</a></li>
-                        <li><a class="dropdown-item" href="/ForCustomer/MyOrders/Index" style="background-color: white;"><i
-                                    class='bx bxs-receipt'></i>Đơn hàng của tôi</a></li>
-                        <li><a class="dropdown-item" href="/ForCustomer/MyReviews/Index" style="background-color: white;"><i
-                                    class='bx bxs-message-square-dots'></i>Nhận xét chuyến đi</a></li>
+                        <li><a class="dropdown-item-user" href="/ForCustomer/MyAccount/Index" style="color: #1976D2;"><i class='bx bxs-user-detail'></i>Thông tin cá nhân</a></li>
+                        <li><a class="dropdown-item-user" href="/ForCustomer/MyOrders/Index" style="color: #1976D2;"><i class='bx bxs-receipt'></i>Đơn hàng của tôi</a></li>
+                        <li><a class="dropdown-item-user" href="/ForCustomer/MyReviews/Index" style="color: #1976D2;"><i class='bx bxs-message-square-dots'></i>Nhận xét chuyến đi</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
