--- a/wwwroot/css/_adminlayout.css
+++ b/wwwroot/css/_adminlayout.css
@@ -44,6 +44,7 @@ body.dark{
     --grey: #25252c;
     --dark: #fbfbfb;
     --light-2: #25252c;
+    --dark-grey: #5a5a5a;
 }
 
 body{
@@ -73,27 +74,28 @@ body{
 }
 
 .sidebar .logo{
-    font-size: 24px;
-    font-weight: 700;
-    height: 56px;
     display: flex;
     align-items: center;
-    color: var(--primary);
-    z-index: 500;
-    padding-bottom: 20px;
-    box-sizing: content-box;
+    height: 58px;
+    padding: 0 10px;
+    justify-content: center;
 }
-
+.sidebar .logo img{
+    max-height: 40px;
+    width: auto;
+    border-radius: 0;
+}
+/* 
 .sidebar .logo .logo-name span{
     color: var(--dark);
-}
+} */
 
-.sidebar .logo .bx{
+/* .sidebar .logo .bx{
     min-width: 60px;
     display: flex;
     justify-content: center;
     font-size: 2.2rem;
-}
+} */
 
 .sidebar .side-menu{
     width: 100%;
@@ -872,6 +874,11 @@ body.dark textarea {
     color: var(--dark);          
     border-color: var(--dark-grey);
 }
+body.dark .form-control{
+    color: var(--light-2);
+    background-color: var(--grey);
+    border-color: var(--dark-grey); 
+}
 body.dark .form-control::placeholder{
     color: var(--dark-grey);
     opacity: 0.7;
@@ -893,6 +900,43 @@ body.dark input:focus,body.dark textarea:focus,body.dark select:focus{
     border-color: var(--primary);
     border-color: var(--primary);
     box-shadow: 0 0 0 0.2rem rgba(var(--primary),0.25);
+}
+body.dark .nav-tabs .nav-link{
+    background: none;
+    border-color: transparent;
+    color: var(--dark-grey);
+}
+body.dark .nav-tabs .nav-link:hover,
+body.dark .nav-tabs .nab-link:focus{
+    border-color: var(--dark-grey);
+    color: var(--light-primary);
+}
+body.dark .nav-tabs .nav-link.active{
+    color: #fff;
+    background-color: var(--primary);
+    border-color: var(--primary);
+    font-weight: 500;
+}
+body.dark .tab-content > .tab-pane.boder{
+    background-color: var(--light-2);
+    border-color: var(--light-primary) !important;
+}
+.nav-item > .nav-link{
+    font-size: 1.3rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.myorder-text-null{
+    font-size: 1.4rem;
+    background: none;
+    color: var(--dark);
+    text-align: center;
+    padding: 20px;
+}
+.tab-pane{
+    border: 1px solid var(--dark-grey);
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    padding: 10px;
 }
 .company-title{
     text-decoration: none;
@@ -928,4 +972,8 @@ body.dark .list-group-item.list-group-item-primary .fw-bold,
 body.dark .list-group-item.list-group-item-primary p,
 body.dark .list-group-item.list-group-item-primary i { /* Áp dụng cho cả icon */
     color: var(--light-primary) !important;
+}
+.tripmanage-map-info{
+    color: var(--dark);
+    font-size: 1.3rem;
 }
