--- a/wwwroot/css/_home.css
+++ b/wwwroot/css/_home.css
@@ -16,6 +16,12 @@
     --bold-primary: #2D324F;
     --light-success: #BBF7D0;
     --bs-primary-rgb: 13,110,253;
+    --font-size-title: 2.8rem;
+    --font-weight-title: bold;
+    --text-transform-title: uppercase;
+    --font-family-title: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    --font-family-primary: 'Lato', sans-serif;
+    --font-size-primary: 1.3rem;
 }
 *{
     margin: 0;
@@ -85,15 +91,50 @@ nav .left .links a.active::after{
 }
 nav .buttons{
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 14px;
 }
 
 nav .buttons a{
-    /* background-color: #eaf4f4; */
-    /* padding: 10px; */
     color: var(--light-2);
-    /* border-radius: 50%; */
     font-size: 18px;
+}
+.dropdown-header{
+    font-size: 1.1rem;
+    font-weight: 500;
+    font-family: var(--font-family-title);
+}
+.dropdown-item-user{
+    background-color: transparent;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    padding: 10px;
+}
+.dropdown-item-user:hover{
+    background-color: var(--grey);
+}
+.btn-help-center{
+    background: transparent;
+    border-radius: 12px;
+    color: var(--light-2);
+    padding: 15px;
+}
+.btn-help-center:hover{
+    background: var(--light-2);
+    border-radius: 12px;
+    color: var(--color-primary);
+}
+.buttons .btn-login{
+    background: var(--light-2);
+    color: var(--color-primary);
+    border-radius: 12px;
+}
+.buttons .btn-login:hover{
+    background: transparent;
+    color: var(--light-2);
 }
 
 header{
@@ -1594,7 +1635,7 @@ body.schedule-page header, body.post-page header {
     background: var(--light-2);
 }
 .privacy-title-header{
-    font-size: 2.8rem;
+    font-size: var(--font-size-title);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     color: var(--color-primary);
@@ -1696,7 +1737,7 @@ body.schedule-page header, body.post-page header {
     font-size: 1.5rem;
     font-weight: 900;
     color: var(--color-primary);
-    text-transform: uppercase;
+    text-transform: var(--text-transform-title);
     padding-left: 15px;
 }
 .contact-title{
@@ -1950,4 +1991,34 @@ body.schedule-page header, body.post-page header {
 .contact-prompt-section .btn-contact:hover {
     background-color: var(--dark);
     transform: translateY(-2px);
+}
+.schedule-title{
+    font-size: var(--font-size-title);
+    color: var(--color-primary);
+    margin-top: 10px;
+    font-family: var(--font-family-title);
+    font-weight: var(--font-weight-title);
+    text-align: center;
+    text-transform: var(--text-transform-title);
+}
+.schedule-title-search{
+    font-size: var(--font-family-primary);
+    font-family: var(--font-familt-primary);
+    font-weight: var(--font-weight-title);
+    text-align: center;
+}
+.schedule-filter-container{
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    border: 1px solid var(--dark-grey );
+}
+.schedule-text-card{
+    font-size: var(--font-size-primary);
+    font-family: var(--font-family-primary);
+}
+.schedule-card-title{
+    font-size: var(--font-size-primary);
+    font-weight: 500;
+    font-family: var(--font-family-primary);
 }
